[tool.poetry]
name = "actions-poc"
version = "0.1.0"
description = ""
authors = ["Olaf Schüsler <o.m.schusler@gmail.com>"]
readme = "README.md"
packages = [{include = "actions_poc"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
